css/index.style.css
/* ... */
#Squad-Container-Texts{
    display: grid;
    /* background-color: #ff0000; */
    grid-row: 1 / span 1;
    grid-column: 2 / span 1;
    grid-template-columns: 1fr;
    grid-template-rows: 0.25fr 1fr;
    color: white;
    padding-right: 2em;
}

#Squad-Container-Texts-JobTitle{
    font-size: 2vw;
    justify-self: left;
    padding-top: 0.5em;
}

#Squad-Container-Texts-Details{
    display: grid;
    font-size: 1.5vw;
    font-weight: 200;
    gap: 1em;
}

#Projects-Title{
    grid-row: 4 / span 1;
    grid-column: 1 / span 1;
    /* position: absolute; */
    font-size: 3.5vw;
    font-weight: 200;
    margin-bottom: -0.1em;
    /* background-color: #ff0000; */
    z-index: 1;
    padding-top: .25em;
    /* padding-bottom: 1%; */
}

.Projects-Cards-Container{
    /* padding-top: 4em; */
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-row: 5 / span 1;
    grid-column: 1 / span 1;
    /* padding: 10%; */
    padding-left: 4%;
    padding-right: 4%;
    padding-bottom: 5%;
    gap: 1em;
    column-gap: 2%;
    row-gap: 2%;
    /* background-color: #FFFFFF; */
    /* background-image: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(77,77,77,1) 99%); */
}
/* ============== CARD CSS ==============*/

#card1{
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
}

h1 {
    place-self: center;    
}

.Component{
    /* display: grid;
    place-items: center; */
    /* margin-top: -4em; */
}

.Card-Container{
    align-self: center;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    height: 100%;
    width: auto;
    text-decoration: none;
    filter: var(--shadow-dark);
    margin-bottom: -35%;
    /* background-color: aqua; */
    /* margin-top: -5em; */
    
}

.Card-Image{
    align-self: end;
    /* align-content: stretch; */
    object-fit: cover;
    height: 100%;
    width: 100%;
    border-radius: var(--border-rad-sm) var(--border-rad-sm) 0px 0px;
    grid-row: 1 / span 1;
    /* margin-top: -5em; */
}

.Card-Title {
    font-size: var(--h2-sm);
}
.Card-Container-Descriptor{
    font-size: 0.75vw;
    font-weight: 400;
    display: grid;
    color: black;
    grid-template-columns: 1fr;
    grid-template-rows: .1fr 1fr .25fr;
    padding: 2em;
    height: 80%;
    border-radius: 0px 0px var(--border-rad-sm) var(--border-rad-sm);
    background-color: var(--bg-light);
    transition: var(--transition);
    grid-row: 2 / span 1;
    line-height: 1.6;
}

.Card-Container:hover > .Card-Container-Descriptor {
    background-color: var(--color-hover);
    color: var(--text-color-light);
}

.Description-Author{
    align-self: end;
}

#Footer{
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 6 / span 1;

    grid-template-columns: 1fr 1fr 2fr;
    grid-template-rows: 1fr;

    background-color: rgb(77, 77, 77);
    padding-bottom: -16em;
    overflow: hidden;
    padding-right: 1em;
    padding-left: 1em;
}

#Footer-Logo{
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    height: auto;
    width: 65%;
    place-self: center;
}

#Footer-Links{
    /* background-color: cornflowerblue; */
    grid-column: 3 / span 1;
    grid-row: 1 / span 1;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: 1fr;
    display: grid;
}

/* ============== MEDIA QUERY ==============*/

@media only screen and (max-width: 850px) {
    #LandingPage-Container{
        margin-bottom: -1em;
        height: 84%;
        /* background-color: rgb(201, 16, 16); */
    }

    .LandingPage-NavBar-Container{
        padding: 1em;
        margin-top: -.35em;
    }

    .NavBarLink{
        font-size: 1.25em;
        padding: .25em;
    }

    #Arrow{
        font-size: 12vw;
    }

    #ArrowText{
        font-size: 5vw;
    }

    #Profile-Container-ID{
        margin-top: -8vw;
    }

    .Card-Container{
        height: 100%;
    }
    
    #ProfileDescription-Container{
        margin-top: -1em;
    }

    #ProfileTitle{
        font-size: 4vw;
    }

    #ProfileDescription{
        font-size: 3vw;
    }

    #Projects-Title{
        font-size: 6vw;
    }

    .Projects-Cards-Container{
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
        /* margin-bottom: 100%; */
    }

    .Card-Container-Descriptor{
        font-size: 3vw;
    }

    .Card-Image{
        height: 85%;
        width: 100%;
    }

    #Footer{
        grid-template-columns: 1fr ;
        grid-template-rows: 0.75fr .75fr;
        margin-top: 25em;
    }

    #Footer-Logo{
        width: 10em;
    }

    #Footer-Links{
        grid-column: 1 / span 1;
        grid-row: 2 / span 1;
    }

}

@media only screen and (min-width: 850px) {
    /* .Card-Container{
        height: 100%;
    } */
    
    .Projects-Cards-Container{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr 1fr;
        padding-bottom: 10vw;
    }

    .Card-Container-Descriptor{
        font-size: 1.5vw;
    }

    .Card-Image{
        height: 85%;
        width: 100%;
    }
}

@media only screen and (min-width: 1200px) {
    /* .Card-Container{
        width: 100%;
        font-size: 20px;
    } */
    
    .Projects-Cards-Container{
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 2fr 2fr 2fr;
    }

    .Card-Container-Descriptor{
        font-size: 0.85vw;
    }
}

